# ragSocket

./: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
